--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
 @import url("reset.css");
 @import url("common.css");
 @import url("header.css");
+@import url("hover.css");
+@import url("dropdown.css");
 @import url("nav.css");
+@import url("slider.css");
+@import url("banners.css");
 
 .banners{
     width: 100%;
