--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -24,6 +24,9 @@
     padding-right: 5px;
     width: inherit;
     height: max-content;
+    -webkit-box-shadow: 2px 3px 7px 0px #989898;
+    -moz-box-shadow: 2px 3px 7px 0px #989898;
+    box-shadow: 2px 3px 7px 0px #989898;
 }
 
 .drop-down .container .drop-down-list li{
