--- a/css/nav.css
+++ b/css/nav.css
@@ -9,5 +9,16 @@
 }
 
 .main-nav *{
-    font-size: 1em;
+    font-size: 0.9rem;
+}
+
+.main-nav .container{
+    width: 200px;
+    padding-top: 20px;
+}
+
+.main-nav .drop-down .container .drop-down-list li{
+    padding-left: 12px;
+    height: 50px;
+    line-height: 50px;
 }
