--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,21 @@
 @import url("banners.css");
 @import url("icons.css");
 
+:root{
+    --back-color: white;
+}
+
 .banners{
     width: 100%;
     height: 300px;
 }
 
 body {
-    background-color: white;
+    background-color: var(--back-color);
     color: #555555;
     line-height: 1.7;
     font-size: 14px;
     font-weight: 400;
     font-family: "Lato", sans-serif;
+    height: 1000px;
   }
