--- a/css/common.css
+++ b/css/common.css
@@ -39,7 +39,7 @@ button, .icon-button{
 }
 
 .box-gray{
-    background-color: rgb(245, 245, 245);
+    background-color: var(--color-box-gray);
 }
 
 .relative{
