--- a/css/main.css
+++ b/css/main.css
@@ -5,20 +5,18 @@
 @import url("dropdown.css");
 @import url("nav.css");
 @import url("slider.css");
-@import url("banners.css");
 @import url("icons.css");
+@import url("banners.css");
 
 :root{
-    --back-color: white;
-}
-
-.banners{
-    width: 100%;
-    height: 300px;
+    --color-back: white;
+    --color-box-gray: #f5f5f5;
+    --color-text-gray: #555555;
+    --color-text-gold: #edc36e;
 }
 
 body {
-    background-color: var(--back-color);
+    background-color: var(--color-back);
     color: #555555;
     line-height: 1.7;
     font-size: 14px;
