--- a/css/nav.css
+++ b/css/nav.css
@@ -1,9 +1,10 @@
 .nav-sticky{
     position: sticky;
     top: 0;
-    background-color: var(--back-color);
+    background-color: var(--color-back);
     padding-top: 20px;
     padding-bottom: 20px;
+    z-index: 100;
 }
 
 .main-nav{
