--- a/css/slider.css
+++ b/css/slider.css
@@ -15,3 +15,20 @@
     flex-grow: 1;
     height: 100%;
 }
+
+.slider-buttons-container{
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.slider-buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
