--- a/css/slider.css
+++ b/css/slider.css
@@ -28,6 +28,8 @@
 
 .slider-buttons{
     display: flex;
+    width: 100%;
+    height: 100%;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
