--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("reset.css");
+@import url("defaults.css");
 @import url("common.css");
 @import url("header.css");
 @import url("hover.css");
@@ -13,6 +14,7 @@
     --color-box-gray: #f5f5f5;
     --color-text-gray: #555555;
     --color-text-gold: #edc36e;
+    --page-width: 1110px;
 }
 
 body {
